[gd_scene load_steps=79 format=2]

[ext_resource path="res://assets/enemies/minotaur/idle/minotaur_01_idle_005.png" type="Texture" id=1]
[ext_resource path="res://assets/enemies/minotaur/idle/minotaur_01_idle_000.png" type="Texture" id=2]
[ext_resource path="res://assets/enemies/minotaur/idle/minotaur_01_idle_006.png" type="Texture" id=3]
[ext_resource path="res://assets/enemies/minotaur/idle/minotaur_01_idle_007.png" type="Texture" id=4]
[ext_resource path="res://assets/enemies/minotaur/idle/minotaur_01_idle_008.png" type="Texture" id=5]
[ext_resource path="res://assets/enemies/minotaur/idle/minotaur_01_idle_001.png" type="Texture" id=6]
[ext_resource path="res://assets/enemies/minotaur/idle/minotaur_01_idle_002.png" type="Texture" id=7]
[ext_resource path="res://assets/enemies/minotaur/idle/minotaur_01_idle_004.png" type="Texture" id=8]
[ext_resource path="res://assets/enemies/minotaur/idle/minotaur_01_idle_009.png" type="Texture" id=9]
[ext_resource path="res://assets/enemies/minotaur/idle/minotaur_01_idle_003.png" type="Texture" id=10]
[ext_resource path="res://assets/enemies/minotaur/hurt/minotaur_01_hurt_001.png" type="Texture" id=11]
[ext_resource path="res://assets/enemies/minotaur/hurt/minotaur_01_hurt_003.png" type="Texture" id=12]
[ext_resource path="res://assets/enemies/minotaur/idle/minotaur_01_idle_011.png" type="Texture" id=13]
[ext_resource path="res://assets/enemies/minotaur/idle/minotaur_01_idle_010.png" type="Texture" id=14]
[ext_resource path="res://assets/enemies/minotaur/hurt/minotaur_01_hurt_000.png" type="Texture" id=15]
[ext_resource path="res://assets/enemies/minotaur/hurt/minotaur_01_hurt_002.png" type="Texture" id=16]
[ext_resource path="res://assets/enemies/minotaur/attacking/minotaur_01_attacking_002.png" type="Texture" id=17]
[ext_resource path="res://assets/enemies/minotaur/hurt/minotaur_01_hurt_010.png" type="Texture" id=18]
[ext_resource path="res://assets/enemies/minotaur/dying/minotaur_01_dying_008.png" type="Texture" id=19]
[ext_resource path="res://assets/enemies/minotaur/dying/minotaur_01_dying_011.png" type="Texture" id=20]
[ext_resource path="res://assets/enemies/minotaur/dying/minotaur_01_dying_003.png" type="Texture" id=21]
[ext_resource path="res://assets/enemies/minotaur/dying/minotaur_01_dying_001.png" type="Texture" id=22]
[ext_resource path="res://assets/enemies/minotaur/hurt/minotaur_01_hurt_006.png" type="Texture" id=23]
[ext_resource path="res://assets/enemies/minotaur/dying/minotaur_01_dying_004.png" type="Texture" id=24]
[ext_resource path="res://assets/enemies/minotaur/hurt/minotaur_01_hurt_005.png" type="Texture" id=25]
[ext_resource path="res://assets/enemies/minotaur/attacking/minotaur_01_attacking_001.png" type="Texture" id=26]
[ext_resource path="res://assets/enemies/minotaur/hurt/minotaur_01_hurt_004.png" type="Texture" id=27]
[ext_resource path="res://assets/enemies/minotaur/hurt/minotaur_01_hurt_011.png" type="Texture" id=28]
[ext_resource path="res://assets/enemies/minotaur/hurt/minotaur_01_hurt_009.png" type="Texture" id=29]
[ext_resource path="res://assets/enemies/minotaur/attacking/minotaur_01_attacking_005.png" type="Texture" id=30]
[ext_resource path="res://assets/enemies/minotaur/dying/minotaur_01_dying_009.png" type="Texture" id=31]
[ext_resource path="res://assets/enemies/minotaur/attacking/minotaur_01_attacking_008.png" type="Texture" id=32]
[ext_resource path="res://assets/enemies/minotaur/dying/minotaur_01_dying_002.png" type="Texture" id=33]
[ext_resource path="res://assets/enemies/minotaur/dying/minotaur_01_dying_000.png" type="Texture" id=34]
[ext_resource path="res://assets/enemies/minotaur/dying/minotaur_01_dying_010.png" type="Texture" id=35]
[ext_resource path="res://assets/enemies/minotaur/dying/minotaur_01_dying_013.png" type="Texture" id=36]
[ext_resource path="res://assets/enemies/minotaur/hurt/minotaur_01_hurt_007.png" type="Texture" id=37]
[ext_resource path="res://assets/enemies/minotaur/hurt/minotaur_01_hurt_008.png" type="Texture" id=38]
[ext_resource path="res://assets/enemies/minotaur/attacking/minotaur_01_attacking_007.png" type="Texture" id=39]
[ext_resource path="res://assets/enemies/minotaur/dying/minotaur_01_dying_007.png" type="Texture" id=40]
[ext_resource path="res://assets/enemies/minotaur/attacking/minotaur_01_attacking_010.png" type="Texture" id=41]
[ext_resource path="res://assets/enemies/minotaur/attacking/minotaur_01_attacking_011.png" type="Texture" id=42]
[ext_resource path="res://assets/enemies/minotaur/attacking/minotaur_01_attacking_000.png" type="Texture" id=43]
[ext_resource path="res://assets/enemies/minotaur/attacking/minotaur_01_attacking_004.png" type="Texture" id=44]
[ext_resource path="res://assets/enemies/minotaur/attacking/minotaur_01_attacking_006.png" type="Texture" id=45]
[ext_resource path="res://assets/enemies/minotaur/attacking/minotaur_01_attacking_009.png" type="Texture" id=46]
[ext_resource path="res://assets/enemies/minotaur/dying/minotaur_01_dying_006.png" type="Texture" id=47]
[ext_resource path="res://assets/enemies/minotaur/dying/minotaur_01_dying_012.png" type="Texture" id=48]
[ext_resource path="res://assets/enemies/minotaur/dying/minotaur_01_dying_005.png" type="Texture" id=49]
[ext_resource path="res://assets/enemies/minotaur/dying/minotaur_01_dying_014.png" type="Texture" id=50]
[ext_resource path="res://assets/enemies/minotaur/attacking/minotaur_01_attacking_003.png" type="Texture" id=51]
[ext_resource path="res://assets/enemies/minotaur/walking/minotaur_01_walking_000.png" type="Texture" id=52]
[ext_resource path="res://assets/enemies/minotaur/walking/minotaur_01_walking_002.png" type="Texture" id=53]
[ext_resource path="res://src/actors/enemy/minotaur_A/minotaur_a.gd" type="Script" id=54]
[ext_resource path="res://assets/enemies/minotaur/walking/minotaur_01_walking_009.png" type="Texture" id=55]
[ext_resource path="res://assets/enemies/minotaur/walking/minotaur_01_walking_010.png" type="Texture" id=56]
[ext_resource path="res://assets/enemies/minotaur/walking/minotaur_01_walking_008.png" type="Texture" id=57]
[ext_resource path="res://assets/enemies/minotaur/walking/minotaur_01_walking_012.png" type="Texture" id=58]
[ext_resource path="res://assets/enemies/minotaur/walking/minotaur_01_walking_016.png" type="Texture" id=59]
[ext_resource path="res://assets/enemies/minotaur/walking/minotaur_01_walking_001.png" type="Texture" id=60]
[ext_resource path="res://assets/enemies/minotaur/walking/minotaur_01_walking_003.png" type="Texture" id=61]
[ext_resource path="res://assets/enemies/minotaur/walking/minotaur_01_walking_004.png" type="Texture" id=62]
[ext_resource path="res://assets/enemies/minotaur/walking/minotaur_01_walking_005.png" type="Texture" id=63]
[ext_resource path="res://assets/enemies/minotaur/walking/minotaur_01_walking_013.png" type="Texture" id=64]
[ext_resource path="res://assets/enemies/minotaur/walking/minotaur_01_walking_014.png" type="Texture" id=65]
[ext_resource path="res://src/actors/enemy/minotaur_A/minotaur_a_state_machine.gd" type="Script" id=66]
[ext_resource path="res://assets/fonts/PottaOne-Regular.ttf" type="DynamicFontData" id=67]
[ext_resource path="res://assets/enemies/minotaur/walking/minotaur_01_walking_011.png" type="Texture" id=68]
[ext_resource path="res://assets/enemies/minotaur/walking/minotaur_01_walking_017.png" type="Texture" id=69]
[ext_resource path="res://assets/enemies/minotaur/walking/minotaur_01_walking_006.png" type="Texture" id=70]
[ext_resource path="res://assets/enemies/minotaur/walking/minotaur_01_walking_007.png" type="Texture" id=71]
[ext_resource path="res://assets/enemies/minotaur/walking/minotaur_01_walking_015.png" type="Texture" id=72]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 10 ), ExtResource( 8 ), ExtResource( 1 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 9 ), ExtResource( 14 ), ExtResource( 13 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 34 ), ExtResource( 22 ), ExtResource( 33 ), ExtResource( 21 ), ExtResource( 24 ), ExtResource( 49 ), ExtResource( 47 ), ExtResource( 40 ), ExtResource( 19 ), ExtResource( 31 ), ExtResource( 35 ), ExtResource( 20 ), ExtResource( 48 ), ExtResource( 36 ), ExtResource( 50 ) ],
"loop": true,
"name": "die",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 11 ), ExtResource( 16 ), ExtResource( 12 ), ExtResource( 27 ), ExtResource( 25 ), ExtResource( 23 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 29 ), ExtResource( 18 ), ExtResource( 28 ), ExtResource( 28 ), ExtResource( 28 ) ],
"loop": true,
"name": "hurt",
"speed": 5.0
}, {
"frames": [ ExtResource( 52 ), ExtResource( 60 ), ExtResource( 53 ), ExtResource( 61 ), ExtResource( 62 ), ExtResource( 63 ), ExtResource( 70 ), ExtResource( 71 ), ExtResource( 57 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 68 ), ExtResource( 58 ), ExtResource( 64 ), ExtResource( 65 ), ExtResource( 72 ), ExtResource( 59 ), ExtResource( 69 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 43 ), ExtResource( 26 ), ExtResource( 17 ), ExtResource( 51 ), ExtResource( 44 ), ExtResource( 30 ), ExtResource( 45 ), ExtResource( 39 ), ExtResource( 32 ), ExtResource( 46 ), ExtResource( 41 ), ExtResource( 42 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 78.8738, 166.73 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 341.889, 178.602 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 138.402, 272.193 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 67 )

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = ExtResource( 67 )

[node name="minotaur_a" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 9
script = ExtResource( 54 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 1.7818 )
frames = SubResource( 1 )
animation = "walk"
frame = 13
speed_scale = 2.0
playing = true
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 2.82843, 35.3553 )
shape = SubResource( 2 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
visible = false
position = Vector2( -67.1458, 11.4872 )
scale = Vector2( 22.1906, 18.9952 )
process_parent = true
physics_process_parent = true

[node name="PlayerDetector" type="Area2D" parent="."]
modulate = Color( 0.00784314, 1, 0.164706, 1 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2( -243.513, 27.6016 )
shape = SubResource( 3 )

[node name="Minotaur1AttackArea" type="Area2D" parent="."]
modulate = Color( 1, 0, 0, 1 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Minotaur1AttackArea"]
position = Vector2( -206.524, -22.3549 )
shape = SubResource( 4 )
disabled = true

[node name="AttackTimer" type="Timer" parent="."]

[node name="PauseTimer" type="Timer" parent="."]

[node name="state_machine" type="Node2D" parent="."]
script = ExtResource( 66 )

[node name="state_label" type="Label" parent="."]
margin_left = -92.042
margin_top = -225.204
margin_right = 86.958
margin_bottom = -181.204
custom_fonts/font = SubResource( 5 )
text = "State = %s"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="health_label" type="Label" parent="."]
margin_left = -92.042
margin_top = -286.635
margin_right = 53.958
margin_bottom = -242.635
custom_fonts/font = SubResource( 6 )
text = "Health = 100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rays" type="Node2D" parent="."]

[node name="left" type="RayCast2D" parent="rays"]
position = Vector2( -1.12244, 0 )
enabled = true
cast_to = Vector2( -125, 250 )
collision_mask = 2147483656
collide_with_areas = true

[node name="right" type="RayCast2D" parent="rays"]
position = Vector2( -1.12244, 0 )
enabled = true
cast_to = Vector2( 125, 250 )
collision_mask = 2147483656
collide_with_areas = true
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_PlayerDetector_body_exited"]
[connection signal="body_entered" from="Minotaur1AttackArea" to="." method="_on_Minotaur1AttackArea_body_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="timeout" from="PauseTimer" to="." method="_on_PauseTimer_timeout"]
